SE CREO EL METODO DE VALIDACION.
Se agregaron nuevos metodos a AmigosBLL para comprobar que no se repita el mismo telefono, Email y celular en la tabla.

--- a/UI/Registros/rAmigo/rAmigo.xaml
+++ b/UI/Registros/rAmigo/rAmigo.xaml
@@ -33,7 +33,7 @@
             <TextBox Name="DireccionTextBox" Height="20" Text="{Binding Direccion}" Width="300" HorizontalAlignment="Left" Margin="5,0"/>
 
             <!--Telefono-->
-            <Label Content="Teléfono" FontSize="11"/>
+            <Label Content="Teléfono(Opcional)" FontSize="11"/>
             <TextBox Name="TelefonoTextBox" Height="20" Text="{Binding Telefono}" Width="300" HorizontalAlignment="Left" Margin="5,0"/>
 
             <!--Celular-->
