SE DISEÑO EL WPF rEntradas. -Se corrigio una propiedad de EntradasBLL. -Se corrigio un aviso en el .cs de rAmigos. -Se borro y se creo la base de datos junto a la migracion.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Menu Height="20" VerticalAlignment="Top">
             <MenuItem Header="Registros">
                 <MenuItem Header="Registrar Amigo" Click="MenuItem_Click"/>
+                <MenuItem Header="Entrada Juego" Click="MenuItem_Click_1"/>
             </MenuItem>
         </Menu>
     </Grid>
