SE DISEÑO EL WPF rPrestamo Y SE PROGRAMARON SUS EVENTOS. Otros cambios: -Se le cambiaron el nombre a uno de las funciones de EntradasBLL, JuegosBLL. -Se inicializo la propiedad Fecha de la clase Prestamos. -Se agrego una nueva imagen. -Se le agrego una funcion a .cs de App para controlar las excepciones.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,6 +12,7 @@
                 <MenuItem Header="Registrar Amigo" Click="MenuItem_Click"/>
                 <MenuItem Header="Entrada Juego" Click="MenuItem_Click_1"/>
                 <MenuItem Header="Registro Juego" Click="MenuItem_Click_2"/>
+                <MenuItem Header="Registrar Prestamo" Click="MenuItem_Click_3"/>
             </MenuItem>
         </Menu>
     </Grid>
