--- a/App.xaml
+++ b/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="PrestamosJuegos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             DispatcherUnhandledException="Application_DispatcherUnhandledException"
              xmlns:local="clr-namespace:PrestamosJuegos"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
