SE CREO EL METODO DE VALIDACION DEL WPF rPrestamos. Otros cambios: -Se agrego una nueva funcion en la clase JuegosBLL para verificar la existencia disponible. -Se corrigio el modificar de la clase PrestamosBLL.

--- a/UI/Registros/rPrestamo/rPrestamo.xaml
+++ b/UI/Registros/rPrestamo/rPrestamo.xaml
@@ -33,7 +33,7 @@
             <ComboBox Name="AmigoComboBox" Height="20" SelectedValue="{Binding AmigoId}" Padding="2,0,-1,-1" Margin="5,0" Cursor=""/>
 
             <!--Observacion-->
-            <Label Content="Observación" FontSize="11"/>
+            <Label Content="Observación (Opcional)" FontSize="11"/>
             <TextBox Name="ObservacionTextBox" Height="50" TextWrapping="Wrap" Text="{Binding Observacion}" Margin="5,0" TextChanged="ObservacionTextBox_TextChanged"/>
 
             <!--Cantidad de juegos-->
