--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,6 +14,9 @@
                 <MenuItem Header="Registro Juego" Click="MenuItem_Click_2"/>
                 <MenuItem Header="Registrar Prestamo" Click="MenuItem_Click_3"/>
             </MenuItem>
+            <MenuItem Header="Consultas">
+                <MenuItem Header="Cosultar Amigos" Click="MenuItem_Click_4"/>
+            </MenuItem>
         </Menu>
     </Grid>
 </Window>
