--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -16,6 +16,9 @@
             </MenuItem>
             <MenuItem Header="Consultas">
                 <MenuItem Header="Cosultar Amigos" Click="MenuItem_Click_4"/>
+                <MenuItem Header="Cosultar Entrada" Click="MenuItem_Click_5"/>
+                <MenuItem Header="Cosultar Juegos" Click="MenuItem_Click_6"/>
+                <MenuItem Header="Cosultar Prestamos" Click="MenuItem_Click_7"/>
             </MenuItem>
         </Menu>
     </Grid>
