--- a/UI/Consultas/cPrestamo/cPrestamo.xaml
+++ b/UI/Consultas/cPrestamo/cPrestamo.xaml
@@ -5,8 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PrestamosJuegos.UI.Consultas.cPrestamo"
         mc:Ignorable="d"
-        Title="cPrestamo" Height="450" Width="800">
+        Title="Consulta Prestamo" Height="410" Width="850" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Resources/search.png">
+
     <Grid>
-        
+        <StackPanel Orientation="Vertical" Margin="10,5,10,0">
+
+            <!--Panel Labels-->
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Filtro" FontSize="11"/>
+                <Label Content="Desde" FontSize="11" Margin="179,0,0,0"/>
+                <Label Content="Hasta" FontSize="11" Margin="110,0,0,0"/>
+
+                <Label Content="Criterio" FontSize="11" Margin="124,0,0,0"/>
+            </StackPanel>
+
+            <!--Panel Controles-->
+            <StackPanel Orientation="Horizontal">
+                <ComboBox Name="FiltroComBox" Height="20" Width="200" Padding="2,0,-1,-1" HorizontalAlignment="Left" Margin="5,0"/>
+                <DatePicker Name="DesdeDatePicker" Height="20" Padding="-1" Margin="10,0,0,0"/>
+                <DatePicker Name="HastaDatePicker" Height="20" Padding="-1" Margin="10,0,10,0"/>
+                <TextBox Name="CriterioTexBox"  Width="200" Height="20" Margin="10,0,0,0"/>
+
+                <Button Name="Buscar" Height="20" Width="60"  Click="Buscar_Click" Margin="10,0,0,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="/Resources/search.png"/>
+                        <Label Content="Buscar" Margin="4,0" Padding="-1"/>
+                    </StackPanel>
+                </Button>
+
+            </StackPanel>
+
+            <DataGrid Name="ConsultaDataGrid" Width="796" Height="300" AutoGenerateColumns="False" BorderBrush="Black" AlternatingRowBackground="#FFBAE3FF" HorizontalAlignment="Left"
+                              ItemsSource="{Binding Prestamos}" Margin="5,5,0,0">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Id" IsReadOnly="True" Binding="{Binding PrestamoId}"/>
+                    <DataGridTextColumn Header="Fecha" IsReadOnly="True" Binding="{Binding Fecha, StringFormat=dd/MM/yyy}"/>
+                    <DataGridTextColumn Header="Amigo Id" IsReadOnly="True" Binding="{Binding AmigoId}"/>
+                    <DataGridTextColumn Header="Observación" IsReadOnly="True" Binding="{Binding Observacion}"/>
+                    <DataGridTextColumn Header="Cantidad Juegos" IsReadOnly="True" Binding="{Binding CantidadJuegos}"/>
+
+                </DataGrid.Columns>
+            </DataGrid>
+
+        </StackPanel>
     </Grid>
 </Window>
