SE CAMBIO EL COLOR DEL INTERLINEADO DE LOS DATAGRID

--- a/UI/Consultas/cJuego/cJuego.xaml
+++ b/UI/Consultas/cJuego/cJuego.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PrestamosJuegos.UI.Consultas.cJuego"
         mc:Ignorable="d"
-        Title="Consulta Juegos" Height="410" Width="850" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Resources/search.png">
+        Title="Consulta Juegos" Height="410" Width="850" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/Resources/search.png" Background="White">
 
     <Grid>
         <StackPanel Orientation="Vertical" Margin="10,5,10,0">
@@ -35,7 +35,7 @@
 
             </StackPanel>
 
-            <DataGrid Name="ConsultaDataGrid" Width="796" Height="300" AutoGenerateColumns="False" BorderBrush="Black" AlternatingRowBackground="#FFBAE3FF" HorizontalAlignment="Left"
+            <DataGrid Name="ConsultaDataGrid" Width="796" Height="300" AutoGenerateColumns="False" BorderBrush="Black" AlternatingRowBackground="#FF41CF41" HorizontalAlignment="Left"
                               ItemsSource="{Binding Juegos}" Margin="5,5,0,0">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="Id" IsReadOnly="True" Binding="{Binding JuegoId}"/>
